--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Quiz Simples</title>
   <style>
     body {
@@ -18,11 +18,15 @@
     }
 
     .question {
-      margin-bottom: 30px;
       background: white;
       padding: 20px;
       border-radius: 12px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      display: none; /* inicialmente escondida */
+    }
+
+    .question.active {
+      display: block; /* só a ativa aparece */
     }
 
     .question h3 {
@@ -76,83 +80,126 @@
 
     button:disabled {
       background-color: #999;
+      cursor: not-allowed;
     }
+
   </style>
 </head>
 <body>
   <div class="quiz-container">
     <form id="quizForm">
-      <div class="question" data-answer="2">
+      <div class="question active" data-answer="2">
         <h3>1. Qual é a capital do Brasil?</h3>
         <div class="options">
-          <label><input type="radio" name="q1" value="0"> São Paulo</label>
-          <label><input type="radio" name="q1" value="1"> Rio de Janeiro</label>
-          <label><input type="radio" name="q1" value="2"> Brasília</label>
-          <label><input type="radio" name="q1" value="3"> Salvador</label>
-          <label><input type="radio" name="q1" value="4"> Belo Horizonte</label>
+          <label><input type="radio" name="q1" value="0" /> São Paulo</label>
+          <label><input type="radio" name="q1" value="1" /> Rio de Janeiro</label>
+          <label><input type="radio" name="q1" value="2" /> Brasília</label>
+          <label><input type="radio" name="q1" value="3" /> Salvador</label>
+          <label><input type="radio" name="q1" value="4" /> Belo Horizonte</label>
         </div>
       </div>
 
       <div class="question" data-answer="1">
         <h3>2. Qual planeta é conhecido como o planeta vermelho?</h3>
         <div class="options">
-          <label><input type="radio" name="q2" value="0"> Terra</label>
-          <label><input type="radio" name="q2" value="1"> Marte</label>
-          <label><input type="radio" name="q2" value="2"> Júpiter</label>
-          <label><input type="radio" name="q2" value="3"> Vênus</label>
-          <label><input type="radio" name="q2" value="4"> Saturno</label>
+          <label><input type="radio" name="q2" value="0" /> Terra</label>
+          <label><input type="radio" name="q2" value="1" /> Marte</label>
+          <label><input type="radio" name="q2" value="2" /> Júpiter</label>
+          <label><input type="radio" name="q2" value="3" /> Vênus</label>
+          <label><input type="radio" name="q2" value="4" /> Saturno</label>
         </div>
       </div>
 
       <div class="question" data-answer="0">
         <h3>3. Qual o maior animal terrestre?</h3>
         <div class="options">
-          <label><input type="radio" name="q3" value="0"> Elefante</label>
-          <label><input type="radio" name="q3" value="1"> Hipopótamo</label>
-          <label><input type="radio" name="q3" value="2"> Girafa</label>
-          <label><input type="radio" name="q3" value="3"> Urso</label>
-          <label><input type="radio" name="q3" value="4"> Rinoceronte</label>
+          <label><input type="radio" name="q3" value="0" /> Elefante</label>
+          <label><input type="radio" name="q3" value="1" /> Hipopótamo</label>
+          <label><input type="radio" name="q3" value="2" /> Girafa</label>
+          <label><input type="radio" name="q3" value="3" /> Urso</label>
+          <label><input type="radio" name="q3" value="4" /> Rinoceronte</label>
         </div>
       </div>
 
-      <button type="button" onclick="verificarRespostas()">Enviar Respostas</button>
+      <button type="button" id="nextBtn">Próxima</button>
     </form>
     <div id="result"></div>
   </div>
 
   <script>
-    function verificarRespostas() {
-      let corretas = 0;
-      const perguntas = document.querySelectorAll('.question');
+    const perguntas = document.querySelectorAll('.question');
+    const btn = document.getElementById('nextBtn');
+    const resultado = document.getElementById('result');
+    let atual = 0;
+    let respostasSelecionadas = [];
 
-      perguntas.forEach((pergunta, index) => {
-        const respostaCorreta = pergunta.dataset.answer;
-        const radios = pergunta.querySelectorAll('input[type="radio"]');
-        let respondido = false;
+    btn.addEventListener('click', () => {
+      const perguntaAtual = perguntas[atual];
+      const radios = perguntaAtual.querySelectorAll('input[type="radio"]');
+      let selecionado = false;
+      let escolha;
 
-        radios.forEach((radio, i) => {
-          const label = radio.parentElement;
-          if (radio.checked) {
-            respondido = true;
-            if (radio.value === respostaCorreta) {
-              label.classList.add('correct');
-              corretas++;
-            } else {
-              label.classList.add('incorrect');
-            }
-          }
-          radio.disabled = true;
-        });
-
-        if (!respondido) {
-          pergunta.style.border = '2px solid red';
+      radios.forEach(radio => {
+        if (radio.checked) {
+          selecionado = true;
+          escolha = radio.value;
         }
       });
 
-      document.querySelector('button').disabled = true;
+      if (!selecionado) {
+        alert('Por favor, selecione uma resposta antes de continuar.');
+        return;
+      }
 
-      const resultado = document.getElementById('result');
+      respostasSelecionadas[atual] = escolha;
+
+      // Esconde a pergunta atual
+      perguntaAtual.classList.remove('active');
+
+      atual++;
+
+      if (atual < perguntas.length) {
+        // Mostra a próxima pergunta
+        perguntas[atual].classList.add('active');
+
+        if (atual === perguntas.length - 1) {
+          btn.textContent = 'Finalizar';
+        }
+      } else {
+        // Acabou o quiz, mostra resultado
+        mostrarResultado();
+      }
+    });
+
+    function mostrarResultado() {
+      let corretas = 0;
+
+      perguntas.forEach((pergunta, i) => {
+        const correta = pergunta.dataset.answer;
+        const labels = pergunta.querySelectorAll('label');
+
+        labels.forEach(label => {
+          const input = label.querySelector('input');
+          label.classList.remove('correct', 'incorrect');
+          if (input.value === correta) {
+            label.classList.add('correct');
+          }
+          if (respostasSelecionadas[i] === input.value && input.value !== correta) {
+            label.classList.add('incorrect');
+          }
+          // Desabilita todas as opções
+          input.disabled = true;
+        });
+
+        if (respostasSelecionadas[i] === correta) {
+          corretas++;
+        }
+      });
+
+      btn.disabled = true;
+
       resultado.textContent = `Você acertou ${corretas} de ${perguntas.length} perguntas!`;
+      resultado.scrollIntoView({behavior: 'smooth'});
     }
   </script>
 </body>
